# MATH-eulerproj

./: .gitignore  README.md
haskell/: app.cabal
haskell/src/: Main.hs  Problem1.hs  Test.hs
haskell/src/P/: E0.hs  E1.hs  E2.hs  E3.hs  E4.hs  E5.hs  E6.hs  E7.hs  E8.hs
