cabal-version:      3.4
name:               app
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable Euler

    ghc-options:         -threaded
                         -Wall
                         -fwarn-incomplete-patterns
                         -fwarn-incomplete-uni-patterns

    main-is:             Main.hs

    build-depends:       base==4.14.3.0
                       , cryptonite==0.30
                       , utf8-string==1.0.2

    hs-source-dirs:      src

    other-modules:       Test
                       , P.E1, P.E2, P.E3, P.E4, P.E5
                       
    other-extensions:    OverloadedStrings

    default-language:    Haskell2010
